# vargasjr-dev

./: .gitignore  .prettierignore  .vercelignore  CONTRIBUTING.md  README.md  drizzle.config.ts  eslint.config.mjs  knip.config.json  knip.config.ts  knip.json  next.config.ts  package-lock.json  package.json  run_agent.sh  tailwind.config.ts  vitest.config.ts
agent/: __init__.py  pyproject.toml  runner.py  vellum.lock.json
agent/models/: contact_form_response.py  inbox.py  inbox_message.py  inbox_message_operation.py  types.py
agent/scripts/: backfill_games.py  backup_memory.py  download_memory.py  pkm_migrate.py  teams.py  uniq_sport_games.py
agent/src/: cli.py  reboot.py  reboot_manager.py  routine_job.py  runner.py  utils.py
agent/src/models/: application.py  application_workspace.py  contact.py  inbox.py  inbox_message.py  inbox_message_operation.py  outbox_message.py  types.py
agent/src/models/pkm/: sport_game.py  sport_team.py  transaction_rule.py
agent/src/services/: __init__.py  aws.py  google_sheets.py
agent/src/workflows/: Dockerfile  __init__.py
agent/src/workflows/brainrot/: sandbox.py  workflow.py
agent/src/workflows/capital_one_accounting/: workflow.py
agent/src/workflows/create_devin_chat/: __init__.py  workflow.py
agent/src/workflows/daily_routine_notion/: workflow.py
agent/src/workflows/make_sports_bets/: sandbox.py  workflow.py
agent/src/workflows/post_twitter/: __init__.py  sandbox.py  workflow.py
agent/src/workflows/process_job/: __init__.py  workflow.py
agent/src/workflows/triage_message/: sandbox.py  workflow.py
agent/src/workflows/weekly_accounting/: sandbox.py  workflow.py
agent/tests/: conftest.py  test_postgres_session.py  test_runner.py
agent/tests/workflows/: test_post_twitter_workflow.py  test_triage_message_workflow.py
agent/typescript/: package-lock.json  package.json  tsconfig.json
agent/typescript/src/: routine-job.ts  utils.ts
agent/workflows/triage_message/: workflow.py
vellum/: pyproject.toml  vellum.lock.json
vellum/evals/: __init__.py  base.py  metrics.py  runner.py
vellum/evals/recruiter_email_happy_path/: __init__.py  test_case.py
vellum/evals/slack_channel_message_happy_path/: __init__.py  test_case.py
vellum/evals/who_are_you_text_message/: __init__.py  test_case.py
vellum/models/: application.py  application_workspace.py  contact.py  contact_github_repo.py  inbox.py  inbox_message.py  inbox_message_operation.py  job.py  job_session.py  outbox_message.py  outbox_message_recipient.py  routine_job.py  types.py
vellum/models/pkm/: sport_team.py  transaction_rule.py
vellum/scripts/: backfill_games.py  backup_memory.py  download_memory.py  pkm_migrate.py  uniq_sport_games.py
vellum/services/: __init__.py  aws.py  constants.py  github_auth.py  gmail.py  google_sheets.py  stripe_service.py  twilio.py
vellum/tests/: test_triage_message_workflow.py
vellum/workflows/: Dockerfile  __init__.py  inputs.py
vellum/workflows/brainrot/: sandbox.py  workflow.py
vellum/workflows/create_devin_chat/: __init__.py  inputs.py  sandbox.py  workflow.py
vellum/workflows/daily_routine_notion/: workflow.py
vellum/workflows/make_sports_bets/: sandbox.py  workflow.py
vellum/workflows/manual_message_operation/: __init__.py  workflow.py
vellum/workflows/newsletter_digest/: __init__.py  sandbox.py  workflow.py
vellum/workflows/post_twitter/: models.py  sandbox.py  workflow.py
vellum/workflows/process_job/: workflow.py
vellum/workflows/schedule_to_cron/: __init__.py  inputs.py  sandbox.py  workflow.py
vellum/workflows/triage_message/: inputs.py  sandbox.py  state.py  workflow.py
vellum/workflows/weekly_accounting/: sandbox.py  workflow.py
vellum/workflows/weekly_groceries/: inputs.py  sandbox.py  workflow.py
(+421 files in other folders)
